Fixed formatting issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
 
         <footer class="mdl-mini-footer">
             <div class="mdl-mini-footer--left-section">
-                © {{ site.time | date: '%Y' }} {{ site.author }}. {{ site.license }} •
+                © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }} •
                 <a href="https://blog.heinrichreimersoftware.com/disclaimer/" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
                 <a href="https://blog.heinrichreimersoftware.com/privacy/" title="Privacy">Privacy</a>
             </div>
