Fixed page layout

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,5 +2,7 @@
 layout: default
 ---
 <div class="mdl-grid">
-    {{content}}
+    <article class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
+        {{content}}
+    </article>
 </div>
