--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,8 +77,8 @@
         <footer class="mdl-mini-footer">
             <div class="mdl-mini-footer--left-section">
                 © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }} •
-                <a href="https://blog.heinrichreimersoftware.com/disclaimer/" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
-                <a href="https://blog.heinrichreimersoftware.com/privacy/" title="Privacy">Privacy</a>
+                <a href="/disclaimer" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
+                <a href="/privacy" title="Privacy">Privacy</a>
             </div>
             <div class="mdl-mini-footer--right-section">
                 Proudly hosted by <a href="https://uberspace.de/">Uberspace</a>
