--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,25 +11,17 @@
     <meta name="description" content="{{ site.description }}">
 
     <!-- Icons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ef6c00">
-    <meta name="apple-mobile-web-app-title" content="<?php echo $config->meta->title ?>">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=XBrebwpyp8">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png?v=XBrebwpyp8" sizes="32x32">
+    <link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=XBrebwpyp8" sizes="192x192">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png?v=XBrebwpyp8" sizes="16x16">
+    <link rel="manifest" href="/manifest.json?v=XBrebwpyp8">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=XBrebwpyp8" color="#dd1155">
+    <link rel="shortcut icon" href="/favicon.ico?v=XBrebwpyp8">
+    <meta name="apple-mobile-web-app-title" content="{{ site.name }}">
     <meta name="application-name" content="{{ site.name }}">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="msapplication-TileColor" content="#dd1155">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=XBrebwpyp8">
     <meta name="theme-color" content="#424242">
 
     <!-- Fonts -->
