--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,12 +68,12 @@
 
         <footer class="mdl-mini-footer">
             <div class="mdl-mini-footer--left-section">
-                © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }} •
-                <a href="/disclaimer" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
-                <a href="/privacy" title="Privacy">Privacy</a>
+                © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }}
+                
             </div>
             <div class="mdl-mini-footer--right-section">
-                Proudly hosted by <a href="https://uberspace.de/">Uberspace</a>
+                <a href="/disclaimer" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
+                <a href="/privacy" title="Privacy">Privacy</a>
             </div>
         </footer>
 
