Updated style and structure

--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -1,8 +1,8 @@
 @import "import/material/color-definitions";
 
-$color-primary: $palette-grey-800;
-$color-primary-dark: $palette-grey-900;
-$color-accent: $palette-orange-800;
+$color-primary: $palette-grey-900;
+$color-primary-dark: $color-black;
+$color-accent: #dd1155;
 $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
 
