Changed title font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium|Roboto+Mono:400,500,700&amp;lang=en" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:700|Arimo:400,700|Buenard:700|Cabin:500|Inconsolata:700|Kreon:700|Montserrat|Poppins:500|Work+Sans:500"
+          rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Styles -->
