--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -13,7 +13,7 @@ $footer-color: rgba($color-black, 0.54);
 @import "import/materialdesignicons";
 @import "import/prism";
 
-$font-family-header: "Roboto Mono", "Roboto", "Helvetica", "Arial", sans-serif;
+$font-family-header: "Cabin", "Roboto Mono", "Roboto", "Helvetica", "Arial", sans-serif;
 
 body {
     background: $palette-grey-50;
@@ -75,28 +75,13 @@ h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typogra
     position: relative;
     background: no-repeat local center center;
     background-size: cover;
-    min-height: 400px;
-    height: 100vh;
     text-align: center;
     box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14), inset 0 -3px 14px 2px rgba($color-black, .12), inset 0 -5px 5px -3px rgba($color-black, .2);
     margin-bottom: 32px;
-    &:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background: rgba($color-black, 0.25);
-    }
 
     &.cover-author {
         min-height: 200px;
         height: 50vh;
-    }
-    &.has-image {
-        padding-bottom: 104px;
-        margin-bottom: 104px;
     }
     .cover-image {
         position: absolute;
