--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -13,16 +13,8 @@ $footer-color: rgba($color-black, 0.54);
 @import "import/materialdesignicons";
 @import "import/prism";
 
-//1
-$font-family-header: "Montserrat", "Roboto", "Helvetica", "Arial", sans-serif; // at 700, first title 400
-
-//2
-$font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600, first title 500, card titles 400
-$font-family-links: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600
-$font-family-body: "Kreon", "Georgia", "Times New Roman", serif; //make fonts slightly thinner ~300
-
 ////////////
-$font-family-body: "Kreon", "Georgia", "Times New Roman", serif; //make fonts slightly thinner ~300
+
 $font-family-body: "Buenard", "Georgia", "Times New Roman", serif; //make font slightly bigger ~16px
 $font-family-body: "Cabin", "Roboto", "Helvetica", "Arial", sans-serif;
 
@@ -32,6 +24,21 @@ $font-family-header: "Work Sans", "Roboto", "Helvetica", "Arial", sans-serif;
 
 $font-family-button: "Anonymous Pro", "Roboto", "Helvetica", "Arial", monospace;
 $font-family-button: "Roboto Mono", "Roboto", "Helvetica", "Arial", monospace;
+
+//////////////////////////
+
+// 1
+$font-family-header: "Montserrat", "Roboto", "Helvetica", "Arial", sans-serif; // at 700, first title 400
+
+// 2
+$font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600, first title 500, card titles 400
+$font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600
+$font-family-body: "Slabo 27px", "Georgia", "Times New Roman", serif;
+
+// 3
+$font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600, first title 500, card titles 400
+$font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600
+$font-family-body: "Kreon", "Georgia", "Times New Roman", serif; //make fonts slightly thinner ~300
 
 body {
     background: $palette-grey-50;
@@ -56,7 +63,12 @@ blockquote {
 h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typography--display-3,
 .mdl-typography--display-4, .mdl-typography--display-5 {
     font-family: $font-family-header;
-    font-weight: 500;
+  font-weight: 600;
+}
+
+.mdl-button {
+  font-family: $font-family-button;
+  font-weight: 600;
 }
 
 /* Layout */
@@ -106,6 +118,7 @@ h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typogra
         > h1 {
             text-decoration: none;
             color: $color-white;
+          font-weight: 500;
             a {
                 text-decoration: none;
                 color: $color-white;
@@ -161,9 +174,22 @@ h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typogra
     > .mdl-card {
         min-height: 24px;
         align-self: flex-start;
-    }
-    > .mdl-card > .mdl-card__media > img {
+      > .mdl-card__media > img {
         width: 100%;
+      }
+      > .mdl-card__title {
+        padding-bottom: 0;
+        > .mdl-card__title-text {
+          font-size: 25px;
+          font-family: $font-family-header;
+          font-weight: 400;
+          line-height: 1.25;
+        }
+      }
+      > .mdl-card__supporting-text {
+        font-size: 17px;
+        line-height: 1.5;
+      }
     }
     > .cta-cell {
         position: relative;
