--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -15,30 +15,30 @@ $footer-color: rgba($color-black, 0.54);
 
 ////////////
 
-$font-family-body: "Buenard", "Georgia", "Times New Roman", serif; //make font slightly bigger ~16px
-$font-family-body: "Cabin", "Roboto", "Helvetica", "Arial", sans-serif;
+$font-family-body: "Buenard", "Georgia", "Times New Roman", serif !default; //make font slightly bigger ~16px
+$font-family-body: "Cabin", "Roboto", "Helvetica", "Arial", sans-serif !default;
 
 //////////////
 
-$font-family-header: "Work Sans", "Roboto", "Helvetica", "Arial", sans-serif;
+$font-family-header: "Work Sans", "Roboto", "Helvetica", "Arial", sans-serif !default;
 
-$font-family-button: "Anonymous Pro", "Roboto", "Helvetica", "Arial", monospace;
-$font-family-button: "Roboto Mono", "Roboto", "Helvetica", "Arial", monospace;
+$font-family-button: "Anonymous Pro", "Roboto", "Helvetica", "Arial", monospace !default;
+$font-family-button: "Roboto Mono", "Roboto", "Helvetica", "Arial", monospace !default;
 
 //////////////////////////
 
 // 1
-$font-family-header: "Montserrat", "Roboto", "Helvetica", "Arial", sans-serif; // at 700, first title 400
+$font-family-header: "Montserrat", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 700, first title 400
 
 // 2
-$font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600, first title 500, card titles 400
-$font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600
-$font-family-body: "Slabo 27px", "Georgia", "Times New Roman", serif;
+$font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600, first title 500, card titles 400
+$font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600
+$font-family-body: "Slabo 27px", "Georgia", "Times New Roman", serif !default;
 
 // 3
-$font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600, first title 500, card titles 400
-$font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif; // at 600
-$font-family-body: "Kreon", "Georgia", "Times New Roman", serif; //make fonts slightly thinner ~300
+$font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600, first title 500, card titles 400
+$font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600
+$font-family-body: "Kreon", "Georgia", "Times New Roman", serif !default; //make fonts slightly thinner ~300
 
 body {
     background: $palette-grey-50;
