--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -105,6 +105,8 @@ h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typogra
     position: relative;
     background: no-repeat local center center;
     background-size: cover;
+  min-height: 400px;
+  height: 100vh;
     text-align: center;
     box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14), inset 0 -3px 14px 2px rgba($color-black, .12), inset 0 -5px 5px -3px rgba($color-black, .2);
     margin-bottom: 32px;
