--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -16073,11 +16073,11 @@ blockquote {
 
 h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typography--display-3,
 .mdl-typography--display-4, .mdl-typography--display-5 {
-    font-family: "Work Sans", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
   font-weight: 600; }
 
 .mdl-button {
-    font-family: "Anonymous Pro", "Roboto", "Helvetica", "Arial", monospace;
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
   font-weight: 600; }
 
 /* Layout */
@@ -16089,7 +16089,7 @@ h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typogra
   top: 2px; }
 
 .mdl-layout-title {
-    font-family: "Work Sans", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 /* Navigation */
@@ -16170,7 +16170,7 @@ h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typogra
     padding-bottom: 0; }
     .apps > .mdl-card > .mdl-card__title > .mdl-card__title-text, .libraries > .mdl-card > .mdl-card__title > .mdl-card__title-text {
       font-size: 25px;
-        font-family: "Work Sans", "Roboto", "Helvetica", "Arial", sans-serif;
+        font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
       font-weight: 400;
       line-height: 1.25; }
   .apps > .mdl-card > .mdl-card__supporting-text, .libraries > .mdl-card > .mdl-card__supporting-text {
@@ -16249,7 +16249,7 @@ h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typogra
   .post .author h4 {
     margin-left: 112px;
     margin-bottom: 8px;
-      font-family: "Work Sans", "Roboto", "Helvetica", "Arial", sans-serif;
+      font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
   }
   .post .author p {
     margin-left: 112px;
