--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -71,6 +71,11 @@ h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typogra
   font-weight: 600;
 }
 
+body, .mdl-typography--headline, .mdl-typography--subhead {
+  font-family: $font-family-body;
+  font-weight: 300;
+}
+
 /* Layout */
 .mdl-layout__drawer, .mdl-layout__obfuscator {
     position: fixed;
