--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -16073,16 +16073,20 @@ blockquote {
 
 h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typography--display-3,
 .mdl-typography--display-4, .mdl-typography--display-5 {
-    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
   font-weight: 600; }
 
 .mdl-button {
-    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
   font-weight: 600; }
 
 body, .mdl-typography--headline, .mdl-typography--subhead {
-    font-family: "Kreon", "Georgia", "Times New Roman", serif;
-    font-weight: 300;
+  font-family: "Kreon", "Georgia", "Times New Roman", serif;
+  font-weight: 300;
+}
+
+.mdl-typography--subhead {
+  font-size: 17px;
 }
 
 /* Layout */
@@ -16094,7 +16098,7 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
   top: 2px; }
 
 .mdl-layout-title {
-    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 /* Navigation */
@@ -16115,8 +16119,8 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
   position: relative;
   background: no-repeat local center center;
   background-size: cover;
-    min-height: 400px;
-    height: 100vh;
+  min-height: 400px;
+  height: 100vh;
   text-align: center;
   box-shadow: inset 0 -8px 10px 1px rgba(0, 0, 0, 0.14), inset 0 -3px 14px 2px rgba(0, 0, 0, 0.12), inset 0 -5px 5px -3px rgba(0, 0, 0, 0.2);
   margin-bottom: 32px; }
@@ -16175,7 +16179,7 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
     padding-bottom: 0; }
     .apps > .mdl-card > .mdl-card__title > .mdl-card__title-text, .libraries > .mdl-card > .mdl-card__title > .mdl-card__title-text {
       font-size: 25px;
-        font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+      font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
       font-weight: 400;
       line-height: 1.25; }
   .apps > .mdl-card > .mdl-card__supporting-text, .libraries > .mdl-card > .mdl-card__supporting-text {
@@ -16254,7 +16258,7 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
   .post .author h4 {
     margin-left: 112px;
     margin-bottom: 8px;
-      font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
   }
   .post .author p {
     margin-left: 112px;
