Started migrating to Polymer / web components

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
     <link rel="import" href="/bower_components/paper-menu/paper-menu.html">
     <link rel="import" href="/bower_components/paper-item/paper-item.html">
     <link rel="import" href="/bower_components/paper-item/paper-icon-item.html">
+    <link rel="import" href="/bower_components/paper-card/paper-card.html">
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
     <link rel="import" href="/bower_components/material-design-icons/material-design-icons.html">
 
@@ -44,6 +45,20 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="/res/css/styles.min.css">
+    <style include="app-grid-style">
+
+        :host {
+            --app-grid-columns: 3;
+            --app-grid-item-height: 100px;
+        }
+
+        @media (max-width: 640px) {
+            :host {
+                --app-grid-columns: 1;
+            }
+        }
+
+    </style>
 
 </head>
 <body>
